[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashly"
version = "1.0"
description = "A simple Hash CLI tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Katia Ventouri", email = "kat.vent@proton.me"}
]
dependencies = ["typer>=0.15.4"]

[project.scripts]
hashly = "hashly.main:app"
