[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hashly"
version = "2.1.1"
requires-python = ">=3.10"
description = "A simple Hash CLI tool"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Katia Ventouri", email = "kat.vent@proton.me"}
]
dependencies = []

[project.scripts]
hashly = "hashly.main:app"
